# onnxmodels

./: .coverage  .gitignore  licence  pyproject.toml  readme.md  requirements.txt
onnxmodels/: __init__.py  onnxmodels.py
pytest/: test_onnxmodels.py
