[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnxmodels"
version = "2"  # Versioni dovrebbero seguire lo schema semantico: MAJOR.MINOR.PATCH
description = "Small wrapper to read and use ONNX models with Python"
authors = [
    { name = "Luca Zoffoli", email = "lzoffoli@technogym.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dynamic = ["readme", "dependencies"]

[project.urls]
Homepage = "https://github.com/lzoffoli-tg/onnxmodels"
"Bug Tracker" = "https://github.com/lzoffoli-tg/onnxmodels/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["onnxmodels"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
readme = { file = "README.md" }
